--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: [ARPALOMBARDIA GitHub Page Site]
+title: [ARPASMR GitHub Page Site]
 description: [Pagina principale di GitHub Pages di ARPASMR]
